--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@eduzz/houston-ui": "^0.34.4",
+    "@reduxjs/toolkit": "^1.6.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
